# yunjian

./: .env  .env.example  .gitignore  README.md  SETUP.md  dev.bat  index.html  package.json  pnpm-lock.yaml  tailwind.config.ts  vite.config.ts
contracts/: YunjianNotes.sol
scripts/: niuma-task-auto.mjs
src/: App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/components/: NoteEditor.tsx  PinToggle.tsx  Sidebar.tsx  ThemeToggle.tsx  WalletNoteEditor.tsx  WalletSidebar.tsx
src/lib/: contract.ts  crypto.ts  export.ts  github.ts  githubAuth.ts  githubCrypto.ts  githubLocalStore.ts  githubSession.ts  hooks.ts  store.ts  supabase.ts  supabaseCrypto.ts  wallet.ts  walletStore.ts
src/pages/: LoginPage.tsx  MainPage.tsx  WalletMainPage.tsx
src/types/: index.ts
supabase/: schema.sql
yunjian-cli/: README.md  package-lock.json  package.json  yunjian-cli-0.1.0.tgz
yunjian-cli/src/: config.ts  crypto.ts  events.ts  github.ts  index.ts  types.ts
