[package]
name = "yunjian"
version = "0.1.0"
description = "云笺 - 跨平台 Markdown 云端笔记应用"
authors = []
edition = "2021"

# 生成动态库供 Tauri 调用
[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
# 打开外部链接
tauri-plugin-opener = "2"
# 文件系统访问（导出 .md 文件）
tauri-plugin-fs = "2"
# 系统文件对话框（另存为）
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
